--- a/NewPrg/NewPrg.vcxproj.filters
+++ b/NewPrg/NewPrg.vcxproj.filters
@@ -20,11 +20,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SYSMETS.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="DEVCAPS.h">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SYSMETS.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
