shiftLeft working, fix resizeBuffer to keep caret in place when expanding buffer

--- a/NewPrg/NewPrg.vcxproj
+++ b/NewPrg/NewPrg.vcxproj
@@ -133,7 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="APITESTS.cpp" />
+    <ClCompile Include="notepad_main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DEVCAPS.h" />
