leaving project as is for now, need to add child window file save/open

--- a/NewPrg/NewPrg.vcxproj.filters
+++ b/NewPrg/NewPrg.vcxproj.filters
@@ -21,10 +21,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DEVCAPS.h">
-      <Filter>Resource Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SYSMETS.h">
-      <Filter>Resource Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="TestingAPI.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
